	available under all Unix GUIs except --gui="none", and this is
	reflected in capabilities().  capabilities("X11") determines
	if an X server can be accessed, and so is more likely to be
	accurate.

    o	binomial() has a new "cauchit" link (suggested by Roger Koenker).

    o	ecdf() now has jumps of the correct size (a multiple of 1/n)
	if there are ties.  (wished by PR#7292).


DOCUMENTATION

    o	File doc/html/faq.html no longer exists, and doc/manual/R-FAQ.html
	(which has active links to other manuals) is used instead.
	(If makeinfo >= 4.5 is not available, the version on CRAN is
	linked to.)


C-LEVEL FACILITIES

    o	There are new public C/C++ header files Rinterface.h and
	R_ext/RStartup.h for use with external GUIs.  The API is not
	yet documented.


DEPRECATED & DEFUNCT

    o	The aqua module for MacOS X has been removed: --with-aqua now
	refers to the unbundled Cocoa GUI.

    o	Capabilities "bzip2", "GNOME, "libz" and "PCRE" are defunct.

    o	Capability "IEEE754" is deprecated.


INSTALLATION CHANGES

    o	-D__NO_MATH_INLINES is only used on older ix86 glibc-based
	systems which need it (tested at configure time).

    o	R_XTRA_[CF]FLAGS are now used during the configuration tests,
	and [CF]PICFLAGS if --enable-R-shlib was specified.  This
	ensures that features such as inlining are only used if the
	compilation flags specified support them.  (PR#7257)

    o	Files FAQ, RESOURCES, doc/html/resources.html are no longer in
	the SVN sources but are made by 'make dist'.

    o	GNOME GUI is via a separate front end rather than by loading a
	module, and can only be used with R as a shared library.
	[This is currently rough, and will lead to the GNOME GUI being
	unbundled in due course.]

    o	Configuring without having the recommended packages is not an
	error unless --with-recommended-packages=no is used.


BUG FIXES

    o	Configuring for Tcl/Tk makes use of ${TK_LIB_SPEC} ${TK_LIBS}
	not ${TK_LIB_SPEC} ${TK_XLIBSW}, which is correct for