@@ -65,7 +65,7 @@ void MatrixRowLabel(SEXP, int, int, int);
 
 /* In Rinternals.h (and MUST be there):
    CustomPrintValue,  PrintValue, PrintValueRec */
-void printArray(SEXP, SEXP, int, SEXP);
+void printArray(SEXP, SEXP, int, int, SEXP);
 void printMatrix(SEXP, int, SEXP, int, int, SEXP, SEXP, char*, char*);
 void printNamedVector(SEXP, SEXP, int, char*);
 void printVector(SEXP, int, int);
